fix align items in diff pages

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -49,8 +49,10 @@ img
 
 main
   display: flex
-  justify-content: center
   flex: 1
+
+.welcome-page
+  justify-content: center
 
 .content-page
   flex-direction: column
@@ -59,7 +61,6 @@ main
   align-items: center
   
 .content-title-text
-  border: 1px solid red
   width: 4rem
   // width: 4.5rem
 
